updates column alignment to resize correctly

--- a/screen.sass
+++ b/screen.sass
@@ -27,16 +27,13 @@ input
   line-height: inherit
   font-family: monospace !important
 
-#code-form
+#editor-container, #shell
   float: left
   width: 50%
 
 #shell
-  float: left
   font-family: monospace
-  width: 50%
   overflow-y: scroll
-  padding-left: 3px
 
   .prompt
     color: $prompt-color
